chore(dev): refactor quality control

--- a/nextflow.config
+++ b/nextflow.config
@@ -4,11 +4,17 @@ params {
   sampleSheet                         = null  // cerebro production sample sheet
 
   databaseDirectory                   = "db"  // db base directory
-
   executionDirectory                  = "."   // cerebro-tower execution directory 
 
   outputDirectory                     = "$params.executionDirectory/output"  // output cerebro-tower
   stageDirectory                      = "$params.executionDirectory/stage"   // json staged sample cerebro-tower
+
+  cerebroProduction {
+    
+    team                              = "CNS"
+    
+
+  }
 
   panviralEnrichment {            
 
@@ -22,8 +28,8 @@ params {
 
     internalControls                  = true
     controlAligner                    = "minimap2"
-    controlIndex                      = "$params.databaseDirectory/phage.fasta"
-    controlReference                  = "$params.databaseDirectory/phage.fasta"
+    controlIndex                      = "$params.databaseDirectory/controls.fasta"
+    controlReference                  = "$params.databaseDirectory/controls.fasta"
 
     adapterForward                    = null
     adapterReverse                    = null
@@ -43,9 +49,8 @@ params {
       readQuality                     = true
       readQualityMethod               = "fastp"  // fastp nanoq
       
-      readDeduplication               = true  
+      readDeduplication               = true
       readDeduplicationHead           = 75
-      readDeduplicationUmi            = "auto"
       readDeduplicationDeterministic  = false
     
       adapterForward                  = null
@@ -57,7 +62,7 @@ params {
       syntheticControlsReference      = "$params.databaseDirectory/ercc.fasta"
     
       hostDepletion                   = true
-      hostDepletionAligner            = "bowtie2"  
+      hostDepletionAligner            = "bowtie2"
       hostDepletionIndex              = "$params.databaseDirectory/chm13v2"
     
       internalControls                = true
@@ -65,31 +70,34 @@ params {
       internalControlsIndex           = "$params.databaseDirectory/controls.fasta"
       internalControlsReference       = "$params.databaseDirectory/controls.fasta"
       
-      backgroundDepletion             = true
+      backgroundDepletion             = false
       backgroundDepletionAligner      = "minimap2"
-      backgroundDepletionIndex        = "$params.databaseDirectory/phage_plasmid_univec_rrna.fasta"
-      backgroundDepletionReference    = "$params.databaseDirectory/phage_plasmid_univec_rrna.fasta"
-
+      backgroundDepletionIndex        = "$params.databaseDirectory/background.fasta"
+      backgroundDepletionReference    = "$params.databaseDirectory/background.fasta"
+      
     }
 
     taxonomicProfile {
 
-      aligner                         = "bowtie2"
-      alignmentIndex                  = "$params.databaseDirectory/cipher_db.fasta" 
-      alignmentReference              = "$params.databaseDirectory/cipher_db.fasta.xz"
+      reference                       = "$params.databaseDirectory/cipher.fasta.xz"
 
-      classifier                      = "kraken2"  // kraken2 metabuli kmcp
+      aligner                         = "bowtie2"
+      alignmentIndex                  = "$params.databaseDirectory/cipher.fasta"
+      alignmentReference              = "$params.pathogenDetection.taxonomicProfile.reference"
+
+      classifier                      = "kraken2 metabuli kmcp"
+
+      classifierAbundanceCorrection   = true
+      classifierGenomeLengths         = "$params.databaseDirectory/genome_lengths.tsv.xz"
       classifierBrackenProfile        = true
       classifierCoverageRemap         = true
-      classifierAbundanceCorrection   = true
-      classifierGenomeLengths         = "$params.databaseDirectory/genome_length.tsv.xz"
 
-      metabuliIndex                   = "$params.databaseDirectory/cipher_db.mb"
-      metabuliReference               = "$params.databaseDirectory/cipher_db.fasta.xz"
-      krakenIndex                     = "$params.databaseDirectory/cipher_db.k2"
-      krakenReference                 = "$params.databaseDirectory/cipher_db.fasta.xz"
-      kmcpIndex                       = "$params.databaseDirectory/cipher_db.km"
-      kmcpReference                   = "$params.databaseDirectory/cipher_db.fasta.xz"
+      metabuliIndex                   = "$params.databaseDirectory/cipher.mb"
+      metabuliReference               = "$params.pathogenDetection.taxonomicProfile.reference"
+      krakenIndex                     = "$params.databaseDirectory/cipher.k2"
+      krakenReference                 = "$params.pathogenDetection.taxonomicProfile.reference"
+      kmcpIndex                       = "$params.databaseDirectory/cipher.km"
+      kmcpReference                   = "$params.pathogenDetection.taxonomicProfile.reference"
 
       remapThreads                    = 2
       remapParallel                   = 4
@@ -98,29 +106,30 @@ params {
 
     metagenomeAssembly {              // low abundance configuration for meta-gp cns
 
-      assembler                       = "metaspades" // metaspades megahit
+      assembler                       = "metaspades megahit" // metaspades megahit
       binner                          = "concoct"  
-
+      
       remapCoverage                   = true
       remapCoverageAligner            = "minimap2"
+      remapCoveragePolisher           = "cobra"
 
       ncbiDatabase                    = true
       ncbiDatabaseIndex               = "$params.databaseDirectory/nt_nr"
-      ncbiDatabaseMethod              = "blastn diamond "
+      ncbiDatabaseMethod              = "blastn diamond"
       ncbiDatabaseSpeciesLca          = true
 
-      viralDetection                  = true
+      virusDetection                  = true
       viralDetectionMethod            = "genomad"
       viralDetectionIndex             = "$params.databaseDirectory/genomad_db"
 
-      rdrpDetection                   = true
-      rdrpDetectionMethod             = "rdrp"
-      rdrpDetectionIndex              = "$params.databaseDirectory/rdrp_db"
+      virusAligner                    = "minimap2"
+      virusIndex                      = "$params.databaseDirectory/img_vr.fasta"
+      virusReference                  = "$params.databaseDirectory/img_vr.fasta"
 
-      phageDetection                  = true
-      phageAligner                    = "minimap2"
-      phageIndex                      = "$params.databaseDirectory/controls.fasta"
-      phageReference                  = "$params.databaseDirectory/controls.fasta"
+      rdrpDetection                   = true
+      rdrpDetectionMethod             = "rdrp-scan"
+      rdrpLibraryTag                  = "RNA"
+      rdrpDetectionIndex              = "$params.databaseDirectory/rdrp_db"
 
       remapThreads                    = 2
       remapParallel                   = 4
@@ -131,11 +140,16 @@ params {
 
       aneuploidyDetection            = true
       aneuploidyReferenceMethod      = "cnvkit"
-      
-      aneuploidyAligner              = "minimap2"
-      aneuploidyIndex                = "$params.databaseDirectory/chm13v2_sr.mmi"
-      aneuploidyReferenceAlignment   = "$params.databaseDirectory/aneuploidy_ref.bam"
+      aneuploidyLibraryTag           = "DNA HOST"
 
+      aneuploidyAligner              = "minimap2"
+      aneuploidyIndex                = "$params.databaseDirectory/chm13v2.mmi"
+      aneuploidyReferenceAlignment   = "$params.databaseDirectory/aneuploidy.bam"
+
+      signatureBacterialViral        = true
+      signatureLibraryTag            = "RNA HOST"
+      signatureReferences            = "two_gene_signature.fasta"
+      
     }
 
   }
@@ -144,6 +158,7 @@ params {
     fastp                 = 8
     scrubby               = 8
     vircov                = 8
+    cerebro               = 1
   }
 
 
@@ -154,23 +169,54 @@ profiles {
 
   cns_assay {
 
-    params.pathogenDetection.qualityControl.adapterForward  = ""
-    params.pathogenDetection.qualityControl.adapterReverse  = ""
-    params.pathogenDetection.qualityControl.deduplication   = true
-    params.pathogenDetection.qualityControl.umiLength       = 12
-
+    params.pathogenDetection.qualityControl.readDeduplication   = true  
+    params.pathogenDetection.qualityControl.adapterForward      = "AGATCGGAAGAGCACACGTCTGAACTCCAGTCA"
+    params.pathogenDetection.qualityControl.adapterReverse      = "AGATCGGAAGAGCGTCGTGTAGGGAAAGAGTGT"
 
   }
 
-
+    micro {
+        executor.$local.cpus = 8
+        executor.$local.memory = '42 GB'
+    }
+    tiny {
+        executor.$local.cpus = 16
+        executor.$local.memory = '64 GB'
+    }
+    mini {
+        executor.$local.cpus = 32
+        executor.$local.memory = '128 GB'
+    }
+    small {
+        executor.$local.cpus = 64
+        executor.$local.memory = '512 GB'
+    }
+    medium {
+        executor.$local.cpus = 128
+        executor.$local.memory = '512 GB'
+    }
+    large {
+        executor.$local.cpus = 256
+        executor.$local.memory = '1960 GB'
+    }
 
 }
 
 process {
 
-    withLabel: vircov_scrubby { cpus = params.threads.vircov }
-    withLabel: vircov { cpus = params.threads.vircov }
-    withLabel: scrubby { cpus = params.threads.scrubby } 
-    withLabel: fastp { cpus = params.threads.fastp }
+    withLabel: cerebro { cpus = params.threads.cerebro }
+
+    withLabel: panviralVirusRecovery { cpus = params.threads.vircov }
+    withLabel: panviralInternalControls { cpus = params.threads.vircov }
+    withLabel: panviralHostDepletion { cpus = params.threads.scrubby } 
+    withLabel: panviralReadQuality { cpus = params.threads.fastp }
+
+    withLabel: pathogenReadScan { cpus = 2 }
+    withLabel: pathogenDeduplication { cpus = 2 }
+    withLabel: pathogenReadQuality { cpus = params.threads.fastp }
+    withLabel: pathogenHostDepletion { cpus = params.threads.scrubby }
+    withLabel: pathogenInternalControls { cpus = params.threads.vircov }
+    withLabel: pathogenSyntheticControls { cpus = params.threads.vircov }
+    withLabel: pathogenBackgroundDepletion { cpus = params.threads.vircov }
 
 }
