chore(dev): sample sheet testing

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,6 +1,8 @@
 params {
 
-  fastq                               = null  // glob string, preference
+  fastqPaired                         = null  // glob string
+  fastqSingle                         = null  // glob string
+
   sampleSheet                         = null  // cerebro production sample sheet
 
   databaseDirectory                   = "db"  // db base directory
@@ -13,7 +15,6 @@ params {
     
     team                              = "CNS"
     
-
   }
 
   panviralEnrichment {            
