chore(dev): sample sheet testing

--- a/nextflow.config
+++ b/nextflow.config
@@ -162,13 +162,13 @@ params {
     cerebro               = 1
   }
 
-
+  monochrome              = false
 
 }
 
 profiles {
 
-  cns_assay {
+  cns {
 
     params.pathogenDetection.qualityControl.readDeduplication   = true  
     params.pathogenDetection.qualityControl.adapterForward      = "AGATCGGAAGAGCACACGTCTGAACTCCAGTCA"
@@ -176,30 +176,30 @@ profiles {
 
   }
 
-    micro {
-        executor.$local.cpus = 8
-        executor.$local.memory = '42 GB'
-    }
-    tiny {
-        executor.$local.cpus = 16
-        executor.$local.memory = '64 GB'
-    }
-    mini {
-        executor.$local.cpus = 32
-        executor.$local.memory = '128 GB'
-    }
-    small {
-        executor.$local.cpus = 64
-        executor.$local.memory = '512 GB'
-    }
-    medium {
-        executor.$local.cpus = 128
-        executor.$local.memory = '512 GB'
-    }
-    large {
-        executor.$local.cpus = 256
-        executor.$local.memory = '1960 GB'
-    }
+  micro {
+      executor.$local.cpus = 8
+      executor.$local.memory = '42 GB'
+  }
+  tiny {
+      executor.$local.cpus = 16
+      executor.$local.memory = '64 GB'
+  }
+  mini {
+      executor.$local.cpus = 32
+      executor.$local.memory = '128 GB'
+  }
+  small {
+      executor.$local.cpus = 64
+      executor.$local.memory = '512 GB'
+  }
+  medium {
+      executor.$local.cpus = 128
+      executor.$local.memory = '512 GB'
+  }
+  large {
+      executor.$local.cpus = 256
+      executor.$local.memory = '1960 GB'
+  }
 
 }
 
