chore(dev): qc testing

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,51 +1,36 @@
 params {
 
-  fastqPaired                         = null  // glob string
-  fastqSingle                         = null  // glob string
+  fastqPaired                         = null                                  // glob string
+  fastqNanopore                       = null                                  // glob string
 
-  sampleSheet                         = null  // cerebro production sample sheet
+  sampleSheet                         = null                                  // production sample sheet
+  sampleSheetProduction               = false                                 // TODO: run_id, run_date, host columns required
 
-  databaseDirectory                   = "db"  // db base directory
-  executionDirectory                  = "."   // cerebro-tower execution directory 
+  outputDirectory                     = "$params.executionDirectory/output"   // output directory
+  databaseDirectory                   = "db"                                  // db base directory
 
-  outputDirectory                     = "$params.executionDirectory/output"  // output cerebro-tower
-  stageDirectory                      = "$params.executionDirectory/stage"   // json staged sample cerebro-tower
+  stageDirectory                      = "$params.executionDirectory/stage"    // cerebro-tower json staged sample 
+  executionDirectory                  = "."                                   // cerebro-tower execution directory 
+
+  monochrome                          = false
 
   cerebroProduction {
     
-    team                              = "CNS"
+    apiToken                          = "$CEREBRO_API_TOKEN"
+    teamName                          = "$CEREBRO_TEAM_NAME"
+    towerIdentifier                   = "$CEREBRO_TOWER_ID"
     
   }
 
-  panviralEnrichment {            
+  cerebroConfig {
+    cipherTaxonomy                    = "$params.databaseDirectory"  // ncbi nodes format
 
-    hostDepletion                     = true
-    hostAligner                       = "bowtie2"
-    hostIndex                         = "$params.databaseDirectory/chm13v2"
-
-    virusAligner                      = "minimap2"
-    virusIndex                        = "$params.databaseDirectory/virus.fasta"
-    virusReference                    = "$params.databaseDirectory/virus.fasta"
-
-    internalControls                  = true
-    controlAligner                    = "minimap2"
-    controlIndex                      = "$params.databaseDirectory/controls.fasta"
-    controlReference                  = "$params.databaseDirectory/controls.fasta"
-
-    adapterForward                    = null
-    adapterReverse                    = null
-
-    remapThreads                      = 2
-    remapParallel                     = 4
-
+    profileAlignmentSpeciesLca        = true
+    qualityControlBackgroundOnly      = false
+    qualityControlDeduplicateFirst    = true
   }
 
-  pathogenDetection {
-
-    cipherDatabase                    = true
-    taxonomy                          = "$params.databaseDirectory"  // ncbi nodes format
-    
-    qualityControl {    
+  qualityControl {    
       
       readQuality                     = true
       readQualityMethod               = "fastp"  // fastp nanoq
@@ -75,44 +60,89 @@ params {
       backgroundDepletionAligner      = "minimap2"
       backgroundDepletionIndex        = "$params.databaseDirectory/background.fasta"
       backgroundDepletionReference    = "$params.databaseDirectory/background.fasta"
-      
-    }
+
+  }
+
+  panviralEnrichment {            
+
+    virusAligner                      = "minimap2"
+    virusIndex                        = "$params.databaseDirectory/virus.fasta"
+    virusReference                    = "$params.databaseDirectory/virus.fasta"
+
+    remapThreads                      = 2
+    remapParallel                     = 4
+
+  }
+
+  bacterialEnrichment {            
+
+    panelAligner                      = "minimap2"
+    panelIndex                        = "$params.databaseDirectory/ngono_amr.fasta"
+    panelExtraction                   = true  // extract aligned reads from background before further processing
+
+    assembly                          = true
+    assemblyMethod                    = "shovill"
+    assemblyCheckM                    = true
+    assemblyAnnotation                = true
+    assemblyAnnotationMethod          = "bakta"
+    assemblyMlst                      = true 
+    assemblyMlstMethod                = "mlst"
+    assemblyAmr                       = true
+    assemblyAmrMethod                 = "ng-star "
+    assemblyAmrIndex                  = "$params.databaseDirectory/ngono_ngstar.fasta"
+    assemblyAmrSpecies                = "Neisseria gonorrhea"
+
+  }
+
+  pathogenDetection {
 
     taxonomicProfile {
 
-      reference                       = "$params.databaseDirectory/cipher.fasta.xz"
-
       aligner                         = "bowtie2"
-      alignmentIndex                  = "$params.databaseDirectory/cipher.fasta"
-      alignmentReference              = "$params.pathogenDetection.taxonomicProfile.reference"
+      alignmentIndex                  = "$params.databaseDirectory/cipher"
+      alignmentReference              = "$params.databaseDirectory/cipher.fasta.gz"
+      alignmentRemapThreads           = 2
+      alignmentRemapParallel          = 4
+      alignmentSubset                 = false
+      alignmentSubsetIndex            = "$params.databaseDirectory/cipher.mash"
+      alignmentSubsetMinHashes        = 1
 
-      classifier                      = "kraken2 metabuli kmcp"
+      classifier                      = "kraken2 metabuli kmcp sylph"
 
-      classifierAbundanceCorrection   = true
-      classifierGenomeLengths         = "$params.databaseDirectory/genome_lengths.tsv.xz"
-      classifierBrackenProfile        = true
-      classifierCoverageRemap         = true
+      abundanceCorrection             = true
+      brackenProfile                  = true
+      coverageRemap                   = true
+      genomeLengths                   = "$params.databaseDirectory/genome_lengths.tsv.xz"
+      classifierReference             = "$params.databaseDirectory/cipher.fasta.xz"
 
-      metabuliIndex                   = "$params.databaseDirectory/cipher.mb"
-      metabuliReference               = "$params.pathogenDetection.taxonomicProfile.reference"
-      krakenIndex                     = "$params.databaseDirectory/cipher.k2"
-      krakenReference                 = "$params.pathogenDetection.taxonomicProfile.reference"
-      kmcpIndex                       = "$params.databaseDirectory/cipher.km"
-      kmcpReference                   = "$params.pathogenDetection.taxonomicProfile.reference"
+      metabuliIndex                   = "$params.databaseDirectory/cipher.metabuli"
+      metabuliReference               = "$params.pathogenDetection.taxonomicProfile.classifierReference"
+      
+      krakenIndex                     = "$params.databaseDirectory/cipher.kraken2"
+      krakenReference                 = "$params.pathogenDetection.taxonomicProfile.classifierReference"
 
-      remapThreads                    = 2
-      remapParallel                   = 4
+      sylphIndex                      = "$params.databaseDirectory/cipher.sylph"
+      sylphReference                  = "$params.pathogenDetection.taxonomicProfile.classifierReference"
 
+      kmcpIndex                       = "$params.databaseDirectory/cipher.kmcp"
+      kmcpReference                   = "$params.pathogenDetection.taxonomicProfile.classifierReference"
+      kmcpMode                        = 0
+      
     }
 
     metagenomeAssembly {              // low abundance configuration for meta-gp cns
 
-      assembler                       = "metaspades megahit" // metaspades megahit
-      binner                          = "concoct"  
+      assembler                       = "metaspades" // metaspades megahit
+      binner                          = "concoct"  // concoct semibin2
       
       remapCoverage                   = true
       remapCoverageAligner            = "minimap2"
       remapCoveragePolisher           = "cobra"
+
+      contigProfile                   = true
+      contigProfileMethod             = "sylph"
+      contigProfileIndex              = "$params.databaseDirectory/cipher.sylph"
+      contigProfileReference          = "$params.pathogenDetection.taxonomicProfile.classifierReference"
 
       ncbiDatabase                    = true
       ncbiDatabaseIndex               = "$params.databaseDirectory/nt_nr"
@@ -123,9 +153,10 @@ params {
       viralDetectionMethod            = "genomad"
       viralDetectionIndex             = "$params.databaseDirectory/genomad_db"
 
-      virusAligner                    = "minimap2"
-      virusIndex                      = "$params.databaseDirectory/img_vr.fasta"
-      virusReference                  = "$params.databaseDirectory/img_vr.fasta"
+      virusProfile                    = true
+      virusProfileMethod              = "minimap2"  // sylph
+      virusProfileIndex               = "$params.databaseDirectory/img_vr.fasta.xz"
+      virusProfileReference           = "$params.databaseDirectory/img_vr.fasta.xz"
 
       rdrpDetection                   = true
       rdrpDetectionMethod             = "rdrp-scan"
@@ -154,15 +185,40 @@ params {
     }
 
   }
-  
-  threads {
-    fastp                 = 8
-    scrubby               = 8
-    vircov                = 8
-    cerebro               = 1
+
+  cultureIdentification {
+
+    speciesTyping  {
+
+      genomeAssembly                  = true  
+      hybridAssembly                  = true         
+      genomeAssembler                 = "hybracter"  // dragonflye, hybracter, shovill
+
+      gtdbtkDatabase                  = "$params.databaseDirectory/gtdb"
+      gtdbtkClassify                  = true
+      gtdbtkDenovo                    = true
+      gtdbtkDenovoOutgroup            = "p__Mycobacteria"
+
+    }
+
+  }
+  resources {
+    threads {
+      fastp                 = 8
+      scrubby               = 8
+      vircov                = 8
+      cerebro               = 1
+      kraken2               = 8
+      bracken               = 1
+      metabuli              = 8
+      sylph                 = 8
+      kmcp                  = 8
+    }
+    memory {
+      metabuli              = "64 GB"
+    }
   }
 
-  monochrome              = false
 
 }
 
@@ -173,6 +229,22 @@ profiles {
     params.pathogenDetection.qualityControl.readDeduplication   = true  
     params.pathogenDetection.qualityControl.adapterForward      = "AGATCGGAAGAGCACACGTCTGAACTCCAGTCA"
     params.pathogenDetection.qualityControl.adapterReverse      = "AGATCGGAAGAGCGTCGTGTAGGGAAAGAGTGT"
+
+  }
+
+
+  bg {
+
+      params.pathogenDetection.cerebroConfig.processQcBackgroundOnly         = true
+
+      params.pathogenDetection.qualityControl.syntheticControls              = false
+      params.pathogenDetection.qualityControl.internalControls               = false
+      params.pathogenDetection.qualityControl.hostDepletion                  = false
+
+      params.pathogenDetection.qualityControl.backgroundDepletion            = true
+      params.pathogenDetection.qualityControl.backgroundDepletionAligner     = "bowtie2"
+      params.pathogenDetection.qualityControl.backgroundDepletionIndex       = "$params.databaseDirectory/qc"
+      params.pathogenDetection.qualityControl.backgroundDepletionReference   = "$params.databaseDirectory/qc"
 
   }
 
@@ -206,18 +278,20 @@ profiles {
 process {
 
     withLabel: cerebro { cpus = params.threads.cerebro }
-
     withLabel: panviralVirusRecovery { cpus = params.threads.vircov }
-    withLabel: panviralInternalControls { cpus = params.threads.vircov }
-    withLabel: panviralHostDepletion { cpus = params.threads.scrubby } 
-    withLabel: panviralReadQuality { cpus = params.threads.fastp }
 
-    withLabel: pathogenReadScan { cpus = 2 }
-    withLabel: pathogenDeduplication { cpus = 2 }
-    withLabel: pathogenReadQuality { cpus = params.threads.fastp }
-    withLabel: pathogenHostDepletion { cpus = params.threads.scrubby }
-    withLabel: pathogenInternalControls { cpus = params.threads.vircov }
-    withLabel: pathogenSyntheticControls { cpus = params.threads.vircov }
-    withLabel: pathogenBackgroundDepletion { cpus = params.threads.vircov }
+    withLabel: qualityReadScan { cpus = 2 }
+    withLabel: qualityDeduplication { cpus = 2 }
+    withLabel: qualityReadQuality { cpus = params.resources.threads.fastp }
+    withLabel: qualityHostDepletion { cpus = params.resources.threads.scrubby }
+    withLabel: qualityInternalControls { cpus = params.resources.threads.vircov }
+    withLabel: qualitySyntheticControls { cpus = params.resources.threads.vircov }
+    withLabel: qualityBackgroundDepletion { cpus = params.resources.threads.vircov }
+
+    withLabel: pathogenProfileKraken2 { cpus = params.resources.threads.kraken2 }
+    withLabel: pathogenProfileBracken { cpus = params.resources.threads.bracken }
+    withLabel: pathogenProfileMetabuli{ cpus = params.resources.threads.metabuli; memory = params.resources.memory.metabuli }
+    withLabel: pathogenProfileSylph { cpus = params.resources.threads.sylph }
+    withLabel: pathogenProfileKmpc { cpus = params.resources.threads.kmcp }
 
 }
