--- a/nextflow.config
+++ b/nextflow.config
@@ -16,9 +16,9 @@ params {
 
   cerebroProduction {
     
-    apiToken                          = "$CEREBRO_API_TOKEN"
-    teamName                          = "$CEREBRO_TEAM_NAME"
-    towerIdentifier                   = "$CEREBRO_TOWER_ID"
+    apiToken                          = "CEREBRO_API_TOKEN"
+    teamName                          = "CEREBRO_TEAM_NAME"
+    towerIdentifier                   = "CEREBRO_TOWER_ID"
     
   }
 
@@ -278,6 +278,7 @@ profiles {
 process {
 
     withLabel: cerebro { cpus = params.threads.cerebro }
+
     withLabel: panviralVirusRecovery { cpus = params.threads.vircov }
 
     withLabel: qualityReadScan { cpus = 2 }
