chore(dev): qc testing

--- a/nextflow.config
+++ b/nextflow.config
@@ -202,6 +202,7 @@ params {
     }
 
   }
+
   resources {
     threads {
       fastp                 = 8
@@ -277,9 +278,9 @@ profiles {
 
 process {
 
-    withLabel: cerebro { cpus = params.threads.cerebro }
+    withLabel: cerebro { cpus = params.resources.threads.cerebro }
 
-    withLabel: panviralVirusRecovery { cpus = params.threads.vircov }
+    withLabel: panviralVirusRecovery { cpus = params.resources.threads.vircov }
 
     withLabel: qualityReadScan { cpus = 2 }
     withLabel: qualityDeduplication { cpus = 2 }
@@ -288,7 +289,6 @@ process {
     withLabel: qualityInternalControls { cpus = params.resources.threads.vircov }
     withLabel: qualitySyntheticControls { cpus = params.resources.threads.vircov }
     withLabel: qualityBackgroundDepletion { cpus = params.resources.threads.vircov }
-
     withLabel: pathogenProfileKraken2 { cpus = params.resources.threads.kraken2 }
     withLabel: pathogenProfileBracken { cpus = params.resources.threads.bracken }
     withLabel: pathogenProfileMetabuli{ cpus = params.resources.threads.metabuli; memory = params.resources.memory.metabuli }
